--- a/index.css
+++ b/index.css
@@ -205,6 +205,7 @@ img {
 @media (max-width: 960px) {
   .card-one{
     margin-left: 10px;
+    margin-top: 70px;
   }
   .card-two{
     margin-left: 10px;
